--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,65 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html{
+    scroll-behavior: smooth;
+}
+
+/*header*/
+.material-symbols-rounded{
+    @apply w-[1em] h-[1em] overflow-hidden;
+    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0 "opsz" 24;
+}
+
+/*menu-btn*/
+.menu-btn{
+    @apply w-10 h-10 grid place-items-center bg-zinc-200 rounded-xl ring-inset ring-1 ring-zinc-100/[10] backdrop-blur-2xl hover:bg-zinc-50/15 transition-[transform,shadow,background-color] active:scale-95
+}
+
+/*navbar*/
+.navbar {
+    @apply absolute top-full mt-2 right-0 min-w-40 p-2 bg-zinc-900 text-white rounded-2xl ring-inset ring-1 ring-zinc-500 scale-90 isolate blur-sm opacity-0 invisible transition-[opacity,transform,filter] md:static md:flex md:items-center md:mt-0 md:opacity-100 md:blur-0 md:visible md:scale-100 backdrop-blur-2xl;
+}
+.navbar.active{
+    @apply opacity-100 scale-100 blur-0 visible
+}
+
+.nav-link {
+    @apply grid items-center h-9 px-4 text-sm font-semibold tracking-wide text-white hover:text-zinc-300 transition-colors;
+}
+
+.nav-link.active {
+    @apply text-white duration-500;
+}
+
+.navbar.active {
+    @apply opacity-100 scale-100 blur-0 visible bg-zinc-900 text-white;
+}
+
+
+.navbar .active-box{
+    @apply absolute top-2 left-2 right-2 h-9 bg-zinc-500 rounded-lg -z-10 transition-[top,left] duration-500 ring-inset ring-1 ring-zinc-50/5
+}
+
+
+/*btn*/
+.btn1 {
+    @apply max-w-max h-10 flex items-center gap-2 px-4 rounded-xl font-medium text-sm ring-1 ring-zinc-500 ring-inset transition-[background-color] text-white bg-zinc-800 hover:bg-zinc-600 active:bg-zinc-700 capitalize
+}
+
+.btn1-secondary {
+    @apply bg-zinc-800 text-white hover:bg-zinc-700 active:bg-zinc-600;
+}
+
+.btn1 .material-symbols-rounded {
+    @apply text-[18px];
+}
+
+.btn1:has(.material-symbols-rounded) {
+    @apply pr-3;
+}
+
+.btn1-outline {
+    @apply h-11 bg-zinc-800 text-white hover:bg-zinc-700 active:bg-zinc-800 ring-1 ring-zinc-300 ring-inset;
+}
